fix: prevent focus states on mobile menu close button

--- a/assets/css/template-parts/header-nav.scss
+++ b/assets/css/template-parts/header-nav.scss
@@ -145,10 +145,10 @@
 	font-weight: $font-weight-bold;
 	font-size: $font-size-base;
 	&, &:hover, &:active, &:focus {
-		color: $yellow;
+		color: $yellow !important;
 		fill: $yellow;
-		background: 0;
-		box-shadow: none;
+		background: none !important;
+		box-shadow: none !important;
 	}
 }
 
